+No need to use overflow: hidden; on the html element anymore! Yay! Just had to set margin and padding on body, html and content elements to 0. +Spiced up the footer to include icons for various links and scripts. +Corrected spelling of flex-flow on .flexbox. +Gave the footer a big separator with flex (WAY better than using float:left float:right). +Added transitions for background-color on the title bar and the footer for a smooth colour change without hefty amounts of javascript.

--- a/styles/default.css
+++ b/styles/default.css
@@ -21,16 +21,29 @@ p {
 }
 html {
 	height: 100%;
-	overflow: hidden;
+	margin: 0;
+	padding: 0;
 }
 body {
 	height: inherit;
+	margin: 0;
+	padding: 0;
 }
 footer {
+	background-color: rgba(0, 0, 0, 0.6);
 	position: fixed;
 	bottom: 0;
+	width: 100%;
+	display: flex;
+	flex-flow: flex-flow;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+	transition: background-color 4s;
 }
 .content {
+	margin: 0;
+	padding: 0;
 	height: 100%;
 	display: flex;
 	flex-flow: flex-flox;
@@ -41,7 +54,7 @@ footer {
 .flexbox {
 	width: 100%;
 	display: flex;
-	flex-flow: flex-flox;
+	flex-flow: flex-flow;
 	justify-content: center;
 	align-content: center;
 	align-items: center;
@@ -51,4 +64,11 @@ footer {
 #centre-title {
 	flex: 1;
 	background-color: rgba(0, 0, 0, 0.6);
+	transition: background-color 4s;
+}
+#copyright, #icons {
+	flex-grow: 1;
+}
+#footer-separator {
+	flex-grow: 8;
 }
